feat: added prettier

--- a/src/shared/colors.scss
+++ b/src/shared/colors.scss
@@ -2,17 +2,17 @@
     --white: #fff;
     --black: #000;
     --background: #141218;
-    --inverse-primary: #6750A4;
-    --surface-variant: #49454F;
-    --on-primary: #381E72;
-    --primary: #D0BCFF;
-    --on-surface: #E6E0E9;
-    --on-surface-variant: #CAC4D0;
-    --on-secondary: #332D41;
-    --surface-container: #211F26;
-    --primary-container: #4F378B;
-    --secondary-container: #4A4458;
-    --secondary-fixed: #E8DEF8;
-    --on-secondary-fixed: #1D192B;
-    --error50: #DC362E;
+    --inverse-primary: #6750a4;
+    --surface-variant: #49454f;
+    --on-primary: #381e72;
+    --primary: #d0bcff;
+    --on-surface: #e6e0e9;
+    --on-surface-variant: #cac4d0;
+    --on-secondary: #332d41;
+    --surface-container: #211f26;
+    --primary-container: #4f378b;
+    --secondary-container: #4a4458;
+    --secondary-fixed: #e8def8;
+    --on-secondary-fixed: #1d192b;
+    --error50: #dc362e;
 }
